# tryCmake

./: CMakeLists.txt  README.md
